--- a/ci_server/Vagrantfile
+++ b/ci_server/Vagrantfile
@@ -71,7 +71,22 @@ Vagrant.configure("2") do |config|
   
   config.vm.provision "shell", inline: <<-SHELL
      	sudo apt-get update
-	     
+	     echo "Create ssh key"   
+	     ssh-keygen -t rsa -N '' -f /home/vagrant/.ssh/id_rsa_stage
+
+		ssh_config=$(cat <<EOF
+		        Host stage-vm
+		        User vagrant
+		        Hostname 192.168.33.7
+		        IdentityFile /home/vagrant/.ssh/id_rsa_stage
+
+EOF
+)
+
+		echo "$ssh_config" > /home/vagrant/.ssh/config
+		#mv /home/vagrant/.ssh/id_rsa_stage.pub /vagrant_data
+		scp vagrant@192.168.33.7:/home/vagrant/.ssh/id_rsa_stage.pub /home/vagrant/.ssh/authorized_keys
+
 	echo "Install default Java and OpenJDK"
 	sudo apt install default-jre -y
 	sudo apt-get install openjdk-8-jdk -y
