--- a/ci_server/playbook/playbook.yml
+++ b/ci_server/playbook/playbook.yml
@@ -38,12 +38,6 @@
     - name: Transfer the provision scripts to automate the process
       copy: src=../scripts dest=/home/vagrant/ mode=0777
 
-    #- name: Create ssh connection
-    #  command: sh /home/vagrant/scripts/ssh-connection.sh
-
-    #- name: Create deploy script
-    #  command: sh /home/vagrant/scripts/deploy-proc.sh
-
     - name: Synchronize files
       synchronize:
         src: ../e4l
@@ -51,24 +45,24 @@
 
     - name: Create artefact-repository directory
       file:
-        path: /home/vagrant/artefact-repository
+        path: /home/vagrant/shared
         state: directory
         mode: '0777'
 
     - name: Create artefact-repository directory structure
       file:
-        path: /home/vagrant/artefact-repository/frontend
+        path: /home/vagrant/shared/frontend
         state: directory
         mode: '0777'
 
     - name: Create flag file in vagrant_data
-      shell: sudo echo "0" > /vagrant_data/flag_staging.txt
+      shell: sudo echo "0" > /home/vagrant/shared/flag_staging
+
+    - name: Create flag file in vagrant_data
+      shell: chmod 777 /home/vagrant/shared/flag_staging
 
     - name: Run the gitlab configuration script.
       command: sh /home/vagrant/scripts/configure-gitlab.sh
-
-    #- name: Run the docker configuration script.
-    #  command: sh /home/vagrant/scripts/configure-docker.sh
 
     - name: Run the repository setup script.
       command: sh /home/vagrant/scripts/setup-repository.sh
@@ -111,3 +105,10 @@
 
     - name: Create the shared folder file if it doesn't exist
       shell: sudo echo "{{ gitlab_runner_token }}" > /vagrant_data/token.txt
+
+    - name: Permission artefact-repository folder 1
+      shell: sudo chown gitlab-runner:gitlab-runner /home/vagrant/shared
+
+    - name: Permission artefact-repository folder 2
+      shell: sudo addgroup gitlab-runner vagrant
+
